--- a/index.css
+++ b/index.css
@@ -1,16 +1,14 @@
-
-.initContainer{
-	margin-top: 270px;
-}
-
-h2, .artForm{
-	text-align: center;
-}
+ #map {
+        width: 100%;
+        height: 400px;
+        padding: 100px;
+      }
 
  #ZipCode{
  	length: 200px;
  }
- .artForm{
- 	
+
+ #ZipCode{
+ 	length: 200px;
  }
 
