--- a/index.css
+++ b/index.css
@@ -1,35 +1,107 @@
- #map {
-        width: 100%;
-        height: 400px;
-        padding: 100px;
-        margin-top: 17px;
-      }
+#map {
+    width: 100%;
+    height: 640px;
+    padding: 100px;
+    margin-top: 17px;
+ }
 
  #ZipCode{
  	length: 200px;
  }
 
-.resultsTitle, .mapTitle{
+.resultsTitle, 
+.mapTitle{
 	text-align: center;
 }
 
-.inLine{
-	display:inline-block;
-	float: left;
-}
-
-.appTitle {
+.appTitle, .appTitle2 {
 	background: lightblue;
+	width: 100%;
+	font-size: 25px;
+	font-family: 'Fjalla One', sans-serif;
+}
+.mapTitle, .resultsTitle{
+	font-weight: bold;
+	font-family: 'Nanum Gothic', sans-serif;
+	font-size: 20px;
 }
 
 li {
 	list-style-type: none;
-	border: 1px solid blue;
+	border: 3px solid #005999;
+  	border-radius: 2px;
 }
 
-.listName
-{
-	text-decoration: bold;
+.listItems{
+	max-height:640px;
+    overflow-y:auto;
 }
+
+.listName, 
+.resultName,
+.openNow
+.zipHeading, 
+.appTitle,
+.appTitle2{
+	font-weight: bold;
+}
+
+.intro p, 
+.zipHeading, 
+.appTitle,
+.appTitle2{
+	padding: 20px;
+	text-align: center;
+}
+
+.intro p, 
+.zipHeading,
+.listItems{
+	font-family: 'Nanum Gothic', sans-serif;
+	font-size: 20px;
+
+}
+
+.listItems img {
+	max-height:200px;
+	max-width: 170px;
+	float: left;
+}
+
+#zipCodeButton{
+	background: lightblue;
+	color: black;
+	width: 180px;
+	height: 34px;
+	font-family: 'Nanum Gothic', sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	border: 3px solid blue;
+	border-radius: 5px;
+}
+
+#zipCode {
+ 	width: 180px;
+    height: 34px;
+    font-family: 'Nanum Gothic', sans-serif;
+   font-size: 20px;
+   border: 3px solid lightblue;
+   border-radius: 5px;
+}
+
+.openNow{
+	color: green;
+}
+
+.zipLabel {
+	margin-right: 350px;
+}
+
+li p{
+	margin: 0px;
+}
+
+
+
 
 
