--- a/index.css
+++ b/index.css
@@ -42,7 +42,9 @@ li {
 .openNow
 .zipHeading, 
 .appTitle,
-.appTitle2{
+.appTitle2
+#zipCodeButton,
+.openNow{
 	font-weight: bold;
 }
 
@@ -75,7 +77,6 @@ li {
 	height: 34px;
 	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 20px;
-	font-weight: bold;
 	border: 3px solid blue;
 	border-radius: 5px;
 }
@@ -94,7 +95,7 @@ li {
 }
 
 .zipLabel {
-	margin-right: 350px;
+	float: left
 }
 
 li p{
