--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
+body{
+	background: #FFEFFF;
+}
+
 #map {
     width: 100%;
-    height: 640px;
+    height: 600px;
     padding: 100px;
     margin-top: 17px;
  }
@@ -15,25 +19,36 @@
 }
 
 .appTitle, .appTitle2 {
-	background: lightblue;
+	border: 1px solid #DD72FF;
+  	border-radius: 7px;
+	background: #FFEFFF;
 	width: 100%;
-	font-size: 25px;
 	font-family: 'Fjalla One', sans-serif;
+}
+
+.appTitle, #zipLabel{
+	font-size: 35px;
+}
+#enterLabel{
+	font-size: 25px;
 }
 .mapTitle, .resultsTitle{
 	font-weight: bold;
 	font-family: 'Nanum Gothic', sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 }
 
 li {
 	list-style-type: none;
-	border: 3px solid #005999;
+	border: 1px solid #7F397F;
   	border-radius: 2px;
 }
 
+li:hover{
+	background: #D992D9;		
+}
 .listItems{
-	max-height:640px;
+	max-height:600px;
     overflow-y:auto;
 }
 
@@ -44,23 +59,35 @@ li {
 .appTitle,
 .appTitle2
 #zipCodeButton,
+#enterLabel,
+#zipLabel,
 .openNow{
 	font-weight: bold;
+}
+
+.listName{
+	font-size: 18px;
 }
 
 .intro p, 
 .zipHeading, 
 .appTitle,
-.appTitle2{
+.appTitle2,
+.error{
 	padding: 20px;
 	text-align: center;
+}
+
+.error{
+	font-size: 16px;
+	font-family: 'Nanum Gothic', sans-serif;
 }
 
 .intro p, 
 .zipHeading,
 .listItems{
 	font-family: 'Nanum Gothic', sans-serif;
-	font-size: 20px;
+	font-size: 16px;
 
 }
 
@@ -70,15 +97,19 @@ li {
 	float: left;
 }
 
+#zipCodeButton:hover{
+	background: #FFF9FF;
+}
+
 #zipCodeButton{
-	background: lightblue;
+	background: #D992D9;
 	color: black;
 	width: 180px;
 	height: 34px;
 	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 20px;
-	border: 3px solid blue;
-	border-radius: 5px;
+	border: 1px solid #7F397F;
+	border-radius: 9px;
 }
 
 #zipCode {
@@ -86,7 +117,7 @@ li {
     height: 34px;
     font-family: 'Nanum Gothic', sans-serif;
    font-size: 20px;
-   border: 3px solid lightblue;
+   border: 1px solid #7F397F;
    border-radius: 5px;
 }
 
