--- a/index.css
+++ b/index.css
@@ -1,5 +1,28 @@
-body{
+body {
 	background: #FFEFFF;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+
+li {
+	list-style-type: none;
+	border: 1px solid #7F397F;
+  	border-radius: 2px;
+}
+
+li:hover {
+	background: #D992D9;		
+}
+
+li p{
+	margin: 0px;
+}
+
+.listItems img {
+	max-height:200px;
+	max-width: 170px;
+	float: left;
+	border: 1px solid #7F397F;
+	border-radius: 9px;
 }
 
 #map {
@@ -11,16 +34,17 @@ body{
 	border-radius: 5px;
  }
 
- #ZipCode{
+ #ZipCode {
  	length: 200px;
  }
 
 .resultsTitle, 
-.mapTitle{
+.mapTitle {
 	text-align: center;
 }
 
-.appTitle, .appTitle2 {
+.appTitle, 
+.appTitle2 {
 	border: 1px solid #DD72FF;
   	border-radius: 7px;
 	background: #FFEFFF;
@@ -28,28 +52,25 @@ body{
 	font-family: 'Fjalla One', sans-serif;
 }
 
-.appTitle, #zipLabel{
+.appTitle, 
+#zipLabel {
 	font-size: 35px;
 }
-#enterLabel{
+
+#enterLabel {
 	font-size: 25px;
+	position: relative;
+    top: 4px;
+    margin-right: 5px;
 }
-.mapTitle, .resultsTitle{
+
+.mapTitle, 
+.resultsTitle {
 	font-weight: bold;
-	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 18px;
 }
 
-li {
-	list-style-type: none;
-	border: 1px solid #7F397F;
-  	border-radius: 2px;
-}
-
-li:hover{
-	background: #D992D9;		
-}
-.listItems{
+.listItems {
 	margin-top: 17px;
 	max-height:480px;
     overflow-y:auto;
@@ -57,22 +78,22 @@ li:hover{
 
 .listName, 
 .resultName,
-.openNow
 .zipHeading, 
 .appTitle,
-.appTitle2
+.appTitle2,
 #zipCodeButton,
 #enterLabel,
 #zipLabel,
-.openNow{
+.openNow {
 	font-weight: bold;
 }
 
-.resultName, .resultNum{
+.resultName, 
+.resultNum {
 	color: #6E1D6E;
 }
 
-.listName{
+.listName {
 	font-size: 18px;
 }
 
@@ -80,37 +101,25 @@ li:hover{
 .zipHeading, 
 .appTitle,
 .appTitle2,
-.error{
+.error {
 	padding: 20px;
 	text-align: center;
 }
 
-.error{
+.error {
 	font-size: 16px;
 	font-family: 'Nanum Gothic', sans-serif;
 }
 
 .intro p, 
 .zipHeading,
-.listItems{
+.listItems {
 	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 16px;
 
 }
 
-.listItems img {
-	max-height:200px;
-	max-width: 170px;
-	float: left;
-	border: 1px solid #7F397F;
-	border-radius: 9px;
-}
-
-#zipCodeButton:hover{
-	background: #FFF9FF;
-}
-
-#zipCodeButton{
+#zipCodeButton {
 	background: #D992D9;
 	color: black;
 	width: 180px;
@@ -119,6 +128,10 @@ li:hover{
 	font-size: 20px;
 	border: 1px solid #7F397F;
 	border-radius: 9px;
+}
+
+#zipCodeButton:hover {
+	background: #FFF9FF;
 }
 
 #zipCode {
@@ -130,7 +143,7 @@ li:hover{
    border-radius: 5px;
 }
 
-.openNow{
+.openNow {
 	color: green;
 }
 
@@ -138,9 +151,6 @@ li:hover{
 	float: left
 }
 
-li p{
-	margin: 0px;
-}
 
 
 
