--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ li:hover {
 	background: #D992D9;		
 }
 
-li p{
+li p {
 	margin: 0px;
 }
 
@@ -153,7 +153,7 @@ li p{
 }
 
 .zipLabel {
-	float: left
+	float: left;
 }
 
 
