--- a/index.css
+++ b/index.css
@@ -1,16 +1,23 @@
+html{
+	background: url("http://publicdomainarchive.com/wp-content/uploads/2015/03/public-domain-images-free-stock-photos-architecture-black-and-white-building.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+
 body {
-	background: #FFEFFF;
-	font-family: 'Nanum Gothic', sans-serif;
+	font-family: 'Oswald', sans-serif;
+
 }
 
 li {
 	list-style-type: none;
-	border: 1px solid #7F397F;
+	/*border: 1px solid #7F397F;*/
   	border-radius: 2px;
+  	padding:18px;
 }
 
 li:hover {
-	background: #D992D9;		
+	background: #D9C1D9;		
 }
 
 li p {
@@ -21,7 +28,7 @@ li p {
 	max-height:200px;
 	max-width: 170px;
 	float: left;
-	border: 1px solid #7F397F;
+	/*border: 1px solid #7F397F;*/
 	border-radius: 9px;
 }
 .listItems ul {
@@ -33,7 +40,7 @@ li p {
     height: 480px;
     padding: 100px;
     margin-top: 17px;
-    border: 2px solid #7F397F;
+    /*border: 2px solid #7F397F;*/
 	border-radius: 5px;
  }
 
@@ -48,12 +55,22 @@ li p {
 
 .appTitle, 
 .appTitle2 {
+	background: rgba(0, 0, 0, 0.7);
+	color:white;
+	/*border-bottom: 1px solid #9EA2A8;*/
+	box-shadow: 0 5px 12px -2px #9EA2A8;
+	border-radius: 9px;
+}
+
+
+/*.appTitle, 
+.appTitle2 {
 	border: 1px solid #DD72FF;
   	border-radius: 7px;
 	background: #FFEFFF;
 	width: 100%;
 	font-family: 'Fjalla One', sans-serif;
-}
+}*/
 
 .appTitle, 
 #zipLabel {
@@ -68,7 +85,7 @@ li p {
 }
 
 .enterLabel2 {
-	margin-left: 33%;
+	margin-left: 18%;
 }
 
 .mapTitle, 
@@ -81,8 +98,8 @@ li p {
 	margin-top: 17px;
 	max-height:480px;
     overflow-y:auto;
-    border: 1px solid #7F397F;
-    box-shadow: 0px 0px 24px #7F397F;
+    /*border: 1px solid #7F397F;*/
+    box-shadow: 0px 0px 24px #9EA2A8;
 }
 
 .listName, 
@@ -91,9 +108,7 @@ li p {
 .appTitle,
 .appTitle2,
 #zipCodeButton,
-#enterLabel,
-#zipLabel,
-.openNow {
+#zipLabel {
 	font-weight: bold;
 }
 
@@ -122,23 +137,25 @@ li p {
 
 .error {
 	font-size: 16px;
-	font-family: 'Nanum Gothic', sans-serif;
 }
 
 .intro p, 
 .zipHeading,
 .listItems {
-	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 16px;
+}
+
+.intro {
+	background: rgba(255, 255, 255, 0.9);
+	border-radius: 9px;
 }
 
 .zipCodeButton, 
 .zipCodeButton2 {
-	background: #D992D9;
+	background: #D9C1D9;
 	color: black;
-	width: 180px;
+	width: 80px;
 	height: 34px;
-	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 20px;
 	border: 1px solid #7F397F;
 	border-radius: 9px;
@@ -150,16 +167,16 @@ li p {
 }
 
 #zipCode {
- 	width: 180px;
-    height: 34px;
-    font-family: 'Nanum Gothic', sans-serif;
+   width: 80px;
+   height: 34px;
+   text-align: center;
    font-size: 20px;
    border: 1px solid #7F397F;
    border-radius: 5px;
 }
 
 .openNow {
-	color: green;
+	color: #7CB74C;
 }
 
 .zipLabel {
