--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html{
 }
 
 body {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -44,10 +44,6 @@ li p {
 	border-radius: 5px;
  }
 
- #zipCode {
- 	length: 200px;
- }
-
 .resultsTitle, 
 .mapTitle {
 	text-align: center;
@@ -55,7 +51,8 @@ li p {
 
 .appTitle, 
 .appTitle2 {
-	background: rgba(0, 0, 0, 0.7);
+	font-family: 'Roboto', sans-serif;
+	background: #051012;
 	color:white;
 	/*border-bottom: 1px solid #9EA2A8;*/
 	box-shadow: 0 5px 12px -2px #9EA2A8;
@@ -102,6 +99,10 @@ li p {
     box-shadow: 0px 0px 24px #9EA2A8;
 }
 
+.art {
+	color: #43CFE8;
+}
+
 .listName, 
 .resultName,
 .zipHeading, 
@@ -136,28 +137,29 @@ li p {
 }
 
 .error {
-	font-size: 16px;
+	font-size: 18px;
 }
 
 .intro p, 
 .zipHeading,
 .listItems {
-	font-size: 16px;
+	font-size: 18px;
 }
 
-.intro {
-	background: rgba(255, 255, 255, 0.9);
+.intro,
+.zipHeading {
+	background: white;
 	border-radius: 9px;
 }
 
 .zipCodeButton, 
 .zipCodeButton2 {
-	background: #D9C1D9;
+	/*background: #D9C1D9;*/
 	color: black;
 	width: 80px;
 	height: 34px;
 	font-size: 20px;
-	border: 1px solid #7F397F;
+	/*border: 1px solid #7F397F;*/
 	border-radius: 9px;
 }
 
@@ -169,10 +171,12 @@ li p {
 #zipCode {
    width: 80px;
    height: 34px;
-   text-align: center;
    font-size: 20px;
-   border: 1px solid #7F397F;
+   /*border: 1px solid #7F397F;*/
    border-radius: 5px;
+   text-align: right;
+   padding: 6px;
+   border-style: none;
 }
 
 .openNow {
