more mods to possible layout

--- a/index.css
+++ b/index.css
@@ -183,7 +183,7 @@ li p {
    height: 34px;
    font-size: 20px;
    border-radius: 5px;
-   text-align: right;
+   text-align: left;
    padding: 6px;
    border-style: none;
 }
