--- a/index.css
+++ b/index.css
@@ -59,12 +59,6 @@ li p {
 	border-radius: 5px;
  }
 
-.resultsTitle, 
-.mapTitle {
-	text-align: center;
-	color: #070f1f;
-}
-
 .appTitle, 
 .appTitle2 {
 	font-family: 'Roboto', sans-serif;
@@ -113,6 +107,8 @@ li p {
 	padding-top: 5px;
 	font-weight: bold;
 	font-size: 18px;
+	text-align: center;
+	color: #070f1f;
 }
 
 .mapTitle {
@@ -147,9 +143,12 @@ li p {
 	font-weight: bold;
 }
 
-.resultName, 
-.resultNum {
+.resultName {
 	color: #070f1f;
+}
+
+.resultNum {
+	color: #43CFE8;
 }
 
 .listName {
